--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  font-size: clamp(40%, 2vw + 1%, 62.5%);
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   color: #828282;
@@ -8,20 +20,20 @@ body {
 }
 
 #main {
-  width: 626px;
-  margin: 64px auto 64px;
+  width: 62.6rem;
+  margin: 6.4rem auto 6.4rem;
 }
 
 #main img {
-  margin-bottom: 32px;
+  margin-bottom: 3.2rem;
 }
 
 h1 {
   font-family: 'Dosis', sans-serif;
   color: #3F3D56;
-  font-size: 32px;
+  font-size: 3.2rem;
   font-weight: 500;
-  margin-bottom: 16px;
+  margin-bottom: 1.6rem;
 }
 
 h1 span {
@@ -39,37 +51,37 @@ a {
 }
 
 p {
-  width: 540px;
-  font-size: 15px;
+  width: 54rem;
+  font-size: 1.5rem;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 2.2rem;
   margin: auto;
 }
 
 #sobre {
-  margin: 0 36px 0 50px;
+  margin: 0 3.6rem 0 5rem;
 }
 
 .line {
-  width: 391px;
+  width: 39.1rem;
   height: 0px;
   border: 1px solid #ECEFF2;
-  margin: 0 auto 16px;
+  margin: 0 auto 1.6rem;
 }
 
 footer a {
   color: #3F3D56;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 1.5rem;
 }
 
 footer a+a {
-  margin-left: 42px;
+  margin-left: 4.2rem;
 }
 
 p+p {
-  margin-top: 32px;
-  width: 626px;
+  margin-top: 3.2rem;
+  width: 62.6rem;
 }
 
 
@@ -78,6 +90,6 @@ p+p {
   bottom: 0px;
   right: 0px;
   width: 100%;
-  height: 104px;
+  height: 10.4rem;
 }
 
