--- a/style.css
+++ b/style.css
@@ -8,11 +8,18 @@
 
 :root {
   font-size: clamp(40%, 2vw + 1%, 62.5%);
+
+  --white: #FFFFFF;
+  --whitish: #ECEFF2;
+  --gray: #828282;
+  --purple: #3F3D56;
+  --pink: #EE24FF;
+
 }
 
 body {
   font-family: 'Open Sans', sans-serif;
-  color: #828282;
+  color: var(--gray);
   text-align: center;
   margin: 0;
   padding: 0;
@@ -30,20 +37,20 @@ body {
 
 h1 {
   font-family: 'Dosis', sans-serif;
-  color: #3F3D56;
+  color: var(--purple);
   font-size: 3.2rem;
   font-weight: 500;
   margin-bottom: 1.6rem;
 }
 
 h1 span {
-  color: #EE24FF;
+  color: var(--pink);
 }
 
 span,
 a {
   font-weight: 700;
-  color: #3F3D56;
+  color: var(--purple);
 }
 
 #flutuar {
@@ -65,14 +72,24 @@ p {
 .line {
   width: 39.1rem;
   height: 0px;
-  border: 1px solid #ECEFF2;
+  border: 1px solid var(--whitish);
   margin: 0 auto 1.6rem;
 }
 
+footer {
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  width: 100%;
+  height: clamp(10.4rem,14rem ,17.6rem);
+}
+
+
 footer a {
-  color: #3F3D56;
+  color: var(--purple);
   text-decoration: none;
   font-size: 1.5rem;
+
 }
 
 footer a+a {
@@ -86,9 +103,6 @@ p+p {
 
 
 #wave {
-  position: fixed;
-  bottom: 0px;
-  right: 0px;
   width: 100%;
   height: 10.4rem;
 }
